Modeler cleanup